1.14.1 (released xx.xx.xxxx)

* Fix wrong option in bzip3, and add tests.
  Closes: GH bug #134


1.14.0 (released 25.10.2023)

* Test if tar supports --force-local on macOS systems.
  Closes: GH bug #125
* Enable archive header encryption for 7z
  Thanks to Michael Serajnik for the initial patch.
  Closes: GH bug #102
* Added support for BZIP3 archives with the bzip3 tool.
  Closes: GH bug #129
* Fix Windows tar doesn't use --force-local
  Thanks to Jack Cherng for the patch.
* Include tests data in the source distribution.
  Thanks to Alfred Wingate for the patch.


1.13 (released 24.10.2023)

* Added support for ZSTANDARD archives with the zstd tool.
* Improved patool diff output: when two archives each have
  only one entry, compare those entries directly instead of
  the parent directory.
* Replace deprecated distutils with setuptools to fix build errors
  with modern Python environments.
  Closes: GH bug #114, #103
* Disable password prompting with 7z in non-interactive mode with
  the option "-p-".
  Thanks to Pascua Theus for the patch.
* Disable sandbox mode for file(1) to fix detection of compressed tar
  archives on systems with libseccomp.
  Thanks to Alfred Wingate for the patch.
* Remove read-only directories after a diff comparison of two archives.
  Thanks to c01o for the patch.


1.12 (released 17.1.2016)

* Add winrar to default search path on Windows.
* Improve usage documentation on Windows.
  Closes: GH bug #19


1.11 (released 9.1.2016)

* Fix 7z unpacking when only p7zip with /usr/bin/7zr is installed.
* Support comic book archives: .cb7 for 7z, .cba for ACE, .cbr for RAR,
  .cbt for TAR and .cbz for ZIP archives.


1.10 (released 10.12.2015)

* Added support for VHD (Virtual Hard Disk) archives with 7z.


1.9 (released 07.12.2015)

* Fix ZPAQ archive creation.
  Patch by vitlav
* Fix ZPAQ archive testing.
* Add more search paths for rar libraries.
  Patch by vitlav
  Closes: GH bug #30
* Fix support URL
  Closes: GH bug #28